--- a/Tamagotchi/Tamagotchi/Tamagotchi.csproj
+++ b/Tamagotchi/Tamagotchi/Tamagotchi.csproj
@@ -39,5 +39,8 @@
     <EmbeddedResource Update="Views\CreateNewCreature.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Settings.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
