--- a/Tamagotchi/Tamagotchi.Android/Tamagotchi.Android.csproj
+++ b/Tamagotchi/Tamagotchi.Android/Tamagotchi.Android.csproj
@@ -101,5 +101,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\Creature_Sad.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Creature_Dead.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
